[gd_scene load_steps=8 format=2]

[ext_resource path="res://actor_framework/Actor.gd" type="Script" id=1]
[ext_resource path="res://actor_states/StateMachine.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/actor_debug/ActorInterface.tscn" type="PackedScene" id=4]
[ext_resource path="res://actor_framework/Target.gd" type="Script" id=5]
[ext_resource path="res://actor_framework/stats/Stats.gd" type="Script" id=6]
[ext_resource path="res://combat/effects/EffectsGroup.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 30, 30 )

[node name="Actor" type="KinematicBody2D" groups=[
"actors",
"dialogue_givers",
]]
collision_layer = 290
collision_mask = 321
script = ExtResource( 1 )

[node name="StateMachine" parent="." instance=ExtResource( 2 )]

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ActorInterface" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 151.512
margin_top = -297.615
margin_right = 381.512
margin_bottom = -112.616

[node name="Target" type="Position2D" parent="."]
script = ExtResource( 5 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Effects" type="Node2D" parent="."]

[node name="Buffs" type="Node2D" parent="Effects"]
script = ExtResource( 7 )

[node name="Debuffs" type="Node2D" parent="Effects"]
script = ExtResource( 7 )

[node name="Miscellaneous" type="Node2D" parent="Effects"]
script = ExtResource( 7 )

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="FlashDuration" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true
[connection signal="state_changed" from="StateMachine" to="ActorInterface" method="_on_StateMachine_state_changed"]
[connection signal="stats_changed" from="Stats" to="ActorInterface" method="_on_Stats_stats_changed"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="timeout" from="FlashDuration" to="." method="_on_FlashDuration_timeout"]
